# rawdrunner

./: .gitignore  Cargo.toml  README.md  linker.ld
.cargo/: config.toml
aetherum-kernel/: Cargo.toml  Makefile  build.rs  linker.ld
aetherum-kernel/.cargo/: config.toml
aetherum-kernel/arch/: mod.rs
aetherum-kernel/arch/arm64/: mod.rs
aetherum-kernel/arch/x86_64/: mod.rs
aetherum-kernel/memory/: mod.rs
aetherum-kernel/scheduler/: mod.rs
aetherum-kernel/src/: lib.rs  main.rs
aetherum-kernel/telemetry/: mod.rs
kernel/: Cargo.toml
kernel/src/: main.rs
modules/example/: Cargo.toml
modules/example/src/: lib.rs
