[workspace]

[package]
name = "aetherum-kernel"
version = "0.0.1"
edition = "2021"
default-run = "aetherum-kernel"     # used by bootimage

[dependencies]
bootloader_api = "0.11.6"
x86_64      = "0.15.1"
spin        = "0.9"
volatile    = "0.5"
uart_16550  = "0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
[build-dependencies]
bootloader = "0.11.6"

[features]
default = ["x86_64"]
x86_64   = []
arm64    = []

[profile.dev]
panic = "abort"
codegen-units = 1
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
