[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.14"

[dependencies.example_module]
path = "../modules/example"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]

[features]
default = []

[package.metadata.bootimage]
target = "x86_64-unknown-none"
